--- a/src/swnr.pcss
+++ b/src/swnr.pcss
@@ -127,10 +127,12 @@ $shadowColor: black;
 }
 
 .item-image {
-  flex-basis: 30px;
+  flex-basis: 20px;
   flex-grow: 0;
   background-size: contain;
   background-repeat: no-repeat;
+  width: 20px;
+  height: 20px;
 }
 
 .item-image:hover {
