search attack interface wip

--- a/src/templates/actors/fragments/faction-assets.html
+++ b/src/templates/actors/fragments/faction-assets.html
@@ -35,7 +35,7 @@
             {{ item.data.data.assetType }}
           </div>
           <div class="flexrow text-center" role="cell">
-            {{ item.data.data.attackTarget }} /
+            {{ item.data.data.attackSource }} vs {{ item.data.data.attackTarget }} 
             {{ item.data.data.attackDamage }}
           </div>
           <div class="flexrow text-center" role="cell">
