icons from hawkin

--- a/src/templates/actors/fragments/faction-assets.html
+++ b/src/templates/actors/fragments/faction-assets.html
@@ -10,7 +10,7 @@
             'swnr.sheet.faction.attackDamage' }} </div>
           <div class=" flexrow text-center" role="columnheader"> {{ localize 'swnr.sheet.faction.counter' }} </div>
           <div class="item-controls small-cell flexrow flex-shrink text-right" role="columnheader">
-            <a class="item-control item-create text-gray-100 hover:text-green-400 transition-colors"
+            <a class="item-control asset-create text-gray-100 hover:text-green-400 transition-colors"
               title="{{localize 'swnr.sheet.add-item'}}" data-item-type="{{ itemType }}" data-item-name="{{ name }}">
               <i class="fas fa-plus"></i>
             </a>
