Creating asset button and fixes to attack roll for v9

--- a/src/templates/actors/faction-sheet.html
+++ b/src/templates/actors/faction-sheet.html
@@ -135,21 +135,21 @@
         <div class="flexrow flex-grow">
           {{>
           "systems/swnr/templates/actors/fragments/faction-assets.html"
-          type="asset" itemType="cunningAsset" name="Cunning" assets=data.data.cunningAssets
+          type="asset" assetType="cunning" name="Cunning" assets=data.data.cunningAssets
           }}
         </div>
         
         <div class="flexrow flex-grow">
           {{>
           "systems/swnr/templates/actors/fragments/faction-assets.html"
-          type="asset" itemType="wealthAsset" name="Wealth" assets=data.data.wealthAssets
+          type="asset" assetType="wealth" name="Wealth" assets=data.data.wealthAssets
           }}
         </div>
 
         <div class="flexrow flex-grow">
           {{>
           "systems/swnr/templates/actors/fragments/faction-assets.html"
-          type="asset" itemType="forceAsset" name="Force" assets=data.data.forceAssets
+          type="asset" assetType="force" name="Force" assets=data.data.forceAssets
           }}
         </div>
       </div>
