--- a/src/templates/actors/fragments/faction-assets.html
+++ b/src/templates/actors/fragments/faction-assets.html
@@ -5,13 +5,13 @@
           <div class="item-name  flexrow" role="columnheader">{{ name }} Assets </div>
           <div class=" flexrow small-cell text-center" role="columnheader"> {{ localize 'swnr.sheet.faction.rating' }} </div>
           <div class=" flexrow small-cell text-center" role="columnheader"> {{ localize 'swnr.sheet.faction.hp' }} </div>
-          <div class=" flexrow text-center" role="columnheader"> {{ localize 'swnr.sheet.faction.assetType' }} </div>
+          {{!-- <div class=" flexrow text-center" role="columnheader"> {{ localize 'swnr.sheet.faction.assetType' }} </div> --}}
           <div class=" flexrow text-center" role="columnheader"> {{ localize 'swnr.sheet.faction.attackTarget' }} / {{ localize
             'swnr.sheet.faction.attackDamage' }} </div>
           <div class=" flexrow text-center" role="columnheader"> {{ localize 'swnr.sheet.faction.counter' }} </div>
           <div class="item-controls small-cell flexrow flex-shrink text-right" role="columnheader">
             <a class="item-control asset-create text-gray-100 hover:text-green-400 transition-colors"
-              title="{{localize 'swnr.sheet.add-item'}}" data-item-type="{{ itemType }}" data-item-name="{{ name }}">
+              title="{{localize 'swnr.sheet.add-item'}}" data-asset-type="{{ assetType }}" data-asset-name="{{ name }}">
               <i class="fas fa-plus"></i>
             </a>
           </div>
@@ -29,11 +29,12 @@
             {{ item.data.data.rating }}
           </div>
           <div class="flexrow small-cell text-center" role="cell">
-            {{ item.data.data.health.value }}
+            {{ item.data.data.health.value }}/{{ item.data.data.health.max }}
+
           </div>
-          <div class="flexrow text-center" role="cell">
+          {{!-- <div class="flexrow text-center" role="cell">
             {{ item.data.data.assetType }}
-          </div>
+          </div> --}}
           <div class="flexrow text-center" role="cell">
             {{ item.data.data.attackSource }} vs {{ item.data.data.attackTarget }} 
             {{ item.data.data.attackDamage }}
