--- a/src/swnr.pcss
+++ b/src/swnr.pcss
@@ -38,6 +38,11 @@ a:hover {
   @apply px-2;
 }
 
+.med-cell {
+  max-width:80px;
+  @apply px-2;
+}
+
 div.editor .editor-content{
   min-height: 100px;
   resize: vertical;
