--- a/src/templates/actors/character-sheet.html
+++ b/src/templates/actors/character-sheet.html
@@ -752,6 +752,14 @@
               /> 
               <label>{{localize 'swnr.sheet.unspent-psy-skill'}}</label>
             </div>
+            <div class="flex flex-col items-center">
+              <a class="item-control item-create text-gray-700 hover:text-green-400 transition-colors"
+                title="{{localize 'swnr.sheet.add-item'}}" data-item-type="skill" data-item-name="Skill">
+                <i class="fas fa-plus"></i>
+              </a>
+              <label>{{localize 'swnr.sheet.add-skill'}}</label>
+            </div>
+
           </div>
           {{else}}
           <button class="skill-load-button" style="margin-top: 3em"
