--- a/src/templates/actors/fragments/faction-assets.html
+++ b/src/templates/actors/fragments/faction-assets.html
@@ -5,11 +5,15 @@
           <div class="item-name  flexrow" role="columnheader">{{ name }} Assets </div>
           <div class=" flexrow small-cell text-center" role="columnheader"> {{ localize 'swnr.sheet.faction.rating' }} </div>
           <div class=" flexrow small-cell text-center" role="columnheader"> {{ localize 'swnr.sheet.faction.hp' }} </div>
-          {{!-- <div class=" flexrow text-center" role="columnheader"> {{ localize 'swnr.sheet.faction.assetType' }} </div> --}}
+          <div class=" flexrow text-center" role="columnheader"> {{ localize 'swnr.sheet.faction.location' }} </div>
           <div class=" flexrow text-center" role="columnheader"> {{ localize 'swnr.sheet.faction.attackTarget' }} / {{ localize
             'swnr.sheet.faction.attackDamage' }} </div>
-          <div class=" flexrow text-center" role="columnheader"> {{ localize 'swnr.sheet.faction.counter' }} </div>
-          <div class="item-controls small-cell flexrow flex-shrink text-right" role="columnheader">
+          <div class=" flexrow text-center pl-2" role="columnheader"> {{ localize 'swnr.sheet.faction.counter' }} </div>
+          <div class="item-controls med-cell flexrow flex-shrink text-right" role="columnheader">
+            <a class="item-control asset-create text-gray-100 hover:text-green-400 transition-colors"
+              title="{{localize 'swnr.sheet.add-item'}}" data-asset-type="{{ assetType }}" data-asset-name="{{ name }}">
+              <i class="fas fa-home"></i>
+            </a>
             <a class="item-control asset-create text-gray-100 hover:text-green-400 transition-colors"
               title="{{localize 'swnr.sheet.add-item'}}" data-asset-type="{{ assetType }}" data-asset-name="{{ name }}">
               <i class="fas fa-plus"></i>
@@ -32,17 +36,23 @@
             {{ item.data.data.health.value }}/{{ item.data.data.health.max }}
 
           </div>
-          {{!-- <div class="flexrow text-center" role="cell">
-            {{ item.data.data.assetType }}
-          </div> --}}
+          <div class="flexrow text-center" role="cell">
+            {{ item.data.data.location }}
+          </div>
           <div class="flexrow text-center" role="cell">
             {{ item.data.data.attackSource }} vs {{ item.data.data.attackTarget }} 
             {{ item.data.data.attackDamage }}
           </div>
-          <div class="flexrow text-center" role="cell">
+          <div class="flexrow text-center pl-2" role="cell">
             {{ item.data.data.counter }}
           </div>
-          <div class="item-controls  small-cell pr-2 text-right flex-shrink flexrow" role="cell">
+          <div class="item-controls  med-cell pr-1 text-right flex-shrink flexrow" role="cell">
+            <a class="item-control item-fix text-gray-600 hover:text-purple-800 transition-colors" title='{{localize 'swnr.sheet.fix-item'}}'>
+              <i class="fas fa-tools"></i></a>
+            <a class="item-control asset-toggle-unusable  {{#unless item.data.data.unusable}}item-working{{/unless}}"
+              title='{{localize 'swnr.sheet.break-item'}}'>
+              <i class="fas fa-heart-broken {{#unless item.data.data.unusable}}item-working{{/unless}}"></i>
+            </a>
             <a class="item-control item-edit text-gray-600 hover:text-purple-800 transition-colors" title='{{localize 'swnr.sheet.edit-item'}}'>
               <i class="fas fa-edit"></i></a>
             <a class="item-control item-delete text-gray-600 hover:text-red-600 transition-colors" title='{{localize 'swnr.sheet.delete-item'}}'>
