--- a/src/templates/actors/fragments/faction-assets.html
+++ b/src/templates/actors/fragments/faction-assets.html
@@ -10,7 +10,7 @@
             'swnr.sheet.faction.attackDamage' }} </div>
           <div class=" flexrow text-center pl-2" role="columnheader"> {{ localize 'swnr.sheet.faction.counter' }} </div>
           <div class="item-controls med-cell flexrow flex-shrink text-right" role="columnheader">
-            <a class="item-control asset-create text-gray-100 hover:text-green-400 transition-colors"
+            <a class="item-control add-base text-gray-100 hover:text-green-400 transition-colors"
               title="{{localize 'swnr.sheet.add-item'}}" data-asset-type="{{ assetType }}" data-asset-name="{{ name }}">
               <i class="fas fa-home"></i>
             </a>
