--- a/src/templates/items/asset-sheet.html
+++ b/src/templates/items/asset-sheet.html
@@ -154,6 +154,13 @@
         type="text" name="data.note" value="{{data.data.note}}" />
     </div>
 
+
+    <!-- unusable -->
+    <div class="flex flexrow items-center">
+      <div>{{localize 'swnr.sheet.faction.unusable'}}:
+      <input type="checkbox" name="data.unusable" {{checked data.data.unusable}}></div>
+    </div>
+
     <!-- turnRoll -->
     {{!-- <div class="flex-col text-center items-center p-2">
       {{localize 'swnr.sheet.faction.turnRoll'}}:
