faction action roll

--- a/src/templates/chat/faction-log.html
+++ b/src/templates/chat/faction-log.html
@@ -6,4 +6,5 @@
     <span style="display:none" class="hiddenLong">{{{ longContent }}} </span> <br>
     <button class="longShowDesc">Show Long Desc.</button></div>
   {{/if}}
+  {{{ roll }}}
 </div>
