Clean up. New Base of Inf

--- a/src/templates/chat/asset-attack-def.html
+++ b/src/templates/chat/asset-attack-def.html
@@ -12,6 +12,7 @@
   {{#if attackDamage}}
   <span>{{localize 'swnr.sheet.faction.att-damage'}}:</span>
   <span title="">{{{ attackDamage }}}</span>
+  <span> Def chooses asset or Base of Infl.(+FactionHP) </span>
   {{/if}}
 
   {{#if defDamage}}
