--- a/src/templates/actors/fragments/faction-assets.html
+++ b/src/templates/actors/fragments/faction-assets.html
@@ -40,15 +40,17 @@
             {{ item.data.data.location }}
           </div>
           <div class="flexrow text-center" role="cell">
+            {{#if item.data.data.attackDamage}}
             {{ item.data.data.attackSource }} vs {{ item.data.data.attackTarget }} 
             {{ item.data.data.attackDamage }}
+            {{/if}}
           </div>
           <div class="flexrow text-center pl-2" role="cell">
             {{ item.data.data.counter }}
           </div>
           <div class="item-controls  med-cell pr-1 text-right flex-shrink flexrow" role="cell">
-            <a class="item-control item-fix text-gray-600 hover:text-purple-800 transition-colors" title='{{localize 'swnr.sheet.fix-item'}}'>
-              <i class="fas fa-tools"></i></a>
+            {{!-- <a class="item-control item-fix text-gray-600 hover:text-purple-800 transition-colors" title='{{localize 'swnr.sheet.fix-item'}}'>
+              <i class="fas fa-tools"></i></a> --}}
             <a class="item-control asset-toggle-unusable  {{#unless item.data.data.unusable}}item-working{{/unless}}"
               title='{{localize 'swnr.sheet.break-item'}}'>
               <i class="fas fa-heart-broken {{#unless item.data.data.unusable}}item-working{{/unless}}"></i>
