--- a/src/templates/actors/faction-sheet.html
+++ b/src/templates/actors/faction-sheet.html
@@ -2,7 +2,7 @@
   <div class="flex gap-2 flex-col">
     <div class="flex">
       <div class="flex-shrink-0 h-40 hidden md:block lg:h-16 md:w-16">
-        <img class="shadow-md bg-gray-100 h-full w-full object-contain profile-img" src="{{actor.img}}"
+        <img class="h-full w-full object-contain profile-img" src="{{actor.img}}"
           title="{{actor.name}}" data-edit="img" />
       </div>
       <div class="flex-grow flexrow px-3  items-center gap-2">
