undisable set skill attr

--- a/src/templates/dialogs/roll-skill.html
+++ b/src/templates/dialogs/roll-skill.html
@@ -31,8 +31,7 @@
       {{#if (eq skill.defaultStat 'ask')}}
         class="w-32 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
       {{else}}
-        class="w-32 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md opacity-50"
-        disabled
+        class="w-32 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
       {{/if}}
     >
       {{#select skill.defaultStat}}
