--- a/src/templates/items/asset-sheet.html
+++ b/src/templates/items/asset-sheet.html
@@ -154,6 +154,14 @@
         type="text" name="data.note" value="{{data.data.note}}" />
     </div>
 
+    <!-- note -->
+    <div class="flex-col text-center items-center p-2">
+      {{localize 'swnr.sheet.faction.attackSpecial'}}:
+      <input
+        class="w-32 text-center px-1.5 py-1 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+        type="text" name="data.attackSpecial" value="{{data.data.attackSpecial}}" />
+    </div>
+
 
     <!-- unusable -->
     <div class="flex flexrow items-center">
