--- a/src/templates/chat/asset-attack.html
+++ b/src/templates/chat/asset-attack.html
@@ -1,10 +1,11 @@
 <div>
   <h3 title="{{ desc }}">{{ name }}</h3>
-  <span>{{ attackKey }}:</span>
+  {{#if attackSpecial}}
+   {{attackSpecial}}
+  {{/if}}
 
+  <span>{{ attackKey }}:</span>
   <span title="">{{{ hitRoll }}}</span>
   <span>{{localize 'swnr.sheet.faction.damage'}}:</span>
-
   <span title="">{{{ damageRoll }}}</span>
-
 </div>
