--- a/src/templates/items/asset-sheet.html
+++ b/src/templates/items/asset-sheet.html
@@ -154,7 +154,7 @@
         type="text" name="data.note" value="{{data.data.note}}" />
     </div>
 
-    <!-- note -->
+    <!-- attackSpecial -->
     <div class="flex-col text-center items-center p-2">
       {{localize 'swnr.sheet.faction.attackSpecial'}}:
       <input
@@ -162,11 +162,24 @@
         type="text" name="data.attackSpecial" value="{{data.data.attackSpecial}}" />
     </div>
 
+    <!-- turnRoll -->
+    <div class="flex-col text-center items-center p-2">
+      {{localize 'swnr.sheet.faction.turnRoll'}}:
+      <input
+        class="w-32 text-center px-1.5 py-1 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+        type="text" name="data.turnRoll" value="{{data.data.turnRoll}}" />
+    </div>
 
     <!-- unusable -->
     <div class="flex flexrow items-center">
       <div>{{localize 'swnr.sheet.faction.unusable'}}:
       <input type="checkbox" name="data.unusable" {{checked data.data.unusable}}></div>
+    </div>
+
+    <!-- stealthed -->
+    <div class="flex flexrow items-center">
+      <div>{{localize 'swnr.sheet.faction.stealthed'}}:
+      <input type="checkbox" name="data.stealthed" {{checked data.data.stealthed}}></div>
     </div>
 
     <!-- turnRoll -->
